# Python-0-Starting

0-Starting/code/ex00/: Hello.py
0-Starting/code/ex02/: find_ft_type.py
0-Starting/code/ex03/: NULL_not_found.py
0-Starting/code/ex05/: building.py
0-Starting/code/ex06/: filterstring.py  ft_filter.py
0-Starting/code/ex07/: sos.py
0-Starting/code/ex08/: Loading.py
0-Starting/code/ex09/: LICENSE  README.md  ft_package.py  info.txt  pyproject.toml
ex01/: format_ft_time.py
ex02/: find_ft_type.py
ex04/: whatis.py
ex08/: Loading.py
